# ZKompose

./: .env.example  .gitignore  .gitmodules  Cargo.toml  foundry.toml  index.html  package-lock.json  package.json  remappings.txt  tailwind.config.ts
apps/: Cargo.toml
contracts/: EvenNumber.sol  Players.sol  Team.sol
contracts/extensions/: ERC721EnumerableURI.sol
contracts/interfaces/: IPlayer.sol  IPlayers.sol
methods/: Cargo.toml
methods/common/: Cargo.toml
methods/common/src/: constants.rs  lib.rs  math.rs  player.rs  team.rs  types.rs  utils.rs
methods/guest/: Cargo.toml
methods/src/: lib.rs
next/: abi.d.ts  next.config.js  package-lock.json  package.json
next/src/: wagmi.ts
next/src/app/: UserProvider.tsx  layout.tsx  page.tsx  providers.tsx  teamSelector.tsx
next/src/app/styles/: globals.css
next/src/app/team/: layout.tsx  page.tsx
next/src/components/: Cards.tsx  Field.tsx  Navbar.tsx  TeamRoster.tsx  player.tsx  team-card.tsx  team.tsx
next/src/contracts/: abi.ts
next/src/lib/: constants.ts  encryption.ts  tokens.ts  types.ts  utils.ts
script/: Deploy.s.sol  Mint.s.sol  config.toml
templates/player/: metadata.json
templates/team/: index.html  metadata.json
test_data/players/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
tests/: Player.t.sol
zkbackend/: Cargo.toml
zkbackend/src/: main.rs
