[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "publisher"
path = "src/bin/publisher.rs"

[[bin]]
name = "listener"
path = "src/bin/listener.rs"

[dependencies]
alloy = { version = "0.2.1", features = ["full"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
