[package]
name = "methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }

[dependencies]
common = { path = "./common" }
cid = { default-features = false, version = "0.11.1" }
ipfs-unixfs = "0.2.0"
risc0-steel = { version = "0.11.0" }
json = "0.12"
# serde = { version = "1.0", default-features = true, features = ["derive"] }
