[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
cid = { default-features = false, version = "0.11.1" }
ipfs-unixfs = { version = "0.2.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
json = "0.12"
array-init = "2.1.0"
risc0-steel = { version = "0.11.0" }
