[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[[bin]]
name = "build-team"
path = "src/bin/build_team.rs"

[workspace]

[dependencies]
common = { path = "../common" }
alloy-primitives = { version = "0.6", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "0.6" }
risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
json = "0.12"
fake = "2.9.2"
serde = "1.0.205"
serde_json = "1.0.122"
sha2 = "0.10.8"

[profile.release]
lto = "thin"
